@@ -1,2 +1,2 @@
 # Same version as reported in doc/ChangeLog
-__version__ = "0.1.34"
+__version__ = "0.1.36"
